@@ -109,8 +109,12 @@ Extension Modules
   assuming BerkeleyDB >= 4.0 and 4.4 respectively.  [pybsddb project SF
   patch numbers 1494885 and 1494902]
 
-- bsddb: added an interface for the BerkeleyDB >= 4.3 DBSequence class
+- bsddb: added an interface for the BerkeleyDB >= 4.3 DBSequence class.
   [pybsddb project SF patch number 1466734]
+
+- bsddb: fix DBCursor.pget() bug with keyword argument names when no data
+  parameter is supplied.  [SF pybsddb bug #1477863]
+
 
 Library
 -------
